Fix T59107: F3 does not work in Python console